// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewTabLinkWithTooltip handles children 1`] = `
<DocumentFragment>
  <mock-styledtooltiphostbase
    calloutprops="[object Object]"
    content="tooltip text"
    styles="[object Object]"
  />
</DocumentFragment>
`;

exports[`NewTabLinkWithTooltip handles children: StyledTooltipHostBase props 1`] = `
{
  "calloutProps": {
    "styles": {
      "beak": "insightsTooltip",
      "root": "insightsTooltip",
    },
  },
  "children": <NewTabLink
    className="insightsLink"
    href="test"
  >
    link text
  </NewTabLink>,
  "content": "tooltip text",
  "styles": {
    "root": "insightsTooltipHost",
  },
}
`;

exports[`NewTabLinkWithTooltip renders with null tooltip content 1`] = `
<DocumentFragment>
  <mock-styledtooltiphostbase
    calloutprops="[object Object]"
    styles="[object Object]"
  />
</DocumentFragment>
`;

exports[`NewTabLinkWithTooltip renders with null tooltip content: StyledTooltipHostBase props 1`] = `
{
  "calloutProps": {
    "styles": {
      "beak": "insightsTooltip",
      "root": "insightsTooltip",
    },
  },
  "children": <NewTabLink
    className="insightsLink"
    href="test"
  />,
  "content": undefined,
  "styles": {
    "root": "insightsTooltipHost",
  },
}
`;

exports[`NewTabLinkWithTooltip renders with tooltip content 1`] = `
<DocumentFragment>
  <mock-styledtooltiphostbase
    calloutprops="[object Object]"
    content="tooltip text"
    styles="[object Object]"
  />
</DocumentFragment>
`;

exports[`NewTabLinkWithTooltip renders with tooltip content: StyledTooltipHostBase props 1`] = `
{
  "calloutProps": {
    "styles": {
      "beak": "insightsTooltip",
      "root": "insightsTooltip",
    },
  },
  "children": <NewTabLink
    className="insightsLink"
    href="test"
  />,
  "content": "tooltip text",
  "styles": {
    "root": "insightsTooltipHost",
  },
}
`;
